tests/source1/pass/functions1.js
function f() {
    display("yay");
}
f();
// expected: "yay"
// expected: undefined