tests/source1/fail/runtime_typecheck9.js
display(!1);
// expected: error: "boo type mismatch"